# SimpleLogger

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: logger_example.cpp
include/: logexception.hpp  loggerloc.hpp  simplelogger.hpp
src/: loggerloc.cpp  simplelogger.cpp
